<resources>
    <string name="app_name">PartyBooking</string>
    <string name="login_welcome">Welcome, let\'s start</string>
    <string name="login_google">Register by Google</string>
    <string name="login_facebook">Register by Facebook</string>
    <string name="login_as_user">Create an account as a user</string>
    <string name="login_as_service_provider">Create an account as a service provider</string>
    <string name="tab_user">Account</string>
    <string name="tab_reservations">Reservations</string>
    <string name="tab_availability">Availability</string>
    <string name="tab_more">More</string>
    <string name="register_first_name">First Name</string>
    <string name="register_family_name">Family Name</string>
    <string name="register_mail">Address Mail Electronic</string>
    <string name="register_phone_number">Phone Number</string>
    <string name="register_country">Country</string>
    <string name="register_regions_support">The Regions that support it</string>
    <string name="register_type_service_support">The Type of service you Support</string>
    <string name="register_bank_account">Your Bank Account</string>
    <string name="register_next">Next</string>
    <string name="register_bank_rajhi">Al-Rajhi</string>
    <string name="register_add_pic">Add Picture</string>
    <string name="register_take_pic_or_choose">take Picture Or Choose from Gallery</string>
    <string name="register_amount_provide">What is the amount that you want to provide ?</string>
    <string name="register_customer_pay">The amount the customer pays</string>
    <string name="register_commission">Party Booking commission is 5%.</string>
    <string name="register_customer_service">Customers Service</string>
    <string name="register_manage_reservation">Save time managing your reservations</string>
    <string name="register_market_name">Marketing in your name</string>
    <string name="register_important_information">Information of interest to you before the show on Party Booking</string>
    <string name="register_reservation_confirm">Will the reservation be confirmed immediately?</string>
    <string name="register_confirm_answer">Yes, reservations are confirmed once the reservation is made and payment is made</string>
    <string name="register_choose_reservation">Can I choose the people that make the reservation?</string>
    <string name="register_reservation_answer">Not everyone can book and confirm reservations on the available date.</string>
    <string name="register_receive_reservation">Can I limit the time I receive reservations status?</string>
    <string name="register_best_calendar">Yes and the best way is to keep your calendar up to date and close dates on which you do not want to receive reservations.</string>
    <string name="register_information_real">I acknowledge that this information is real and legal and is for the name that was mentioned and holds the necessary permits and approvals that can be provided upon request. Party Beijing reserves the right to verify and verify any information provided in this registration process</string>
    <string name="register_read_agree">I have read and agree to</string>
    <string name="terms_and_conditions"><u>Terms and conditions</u></string>
    <string name="register_done">Ready to receive reservations</string>
    <string name="register_not_done">Not Ready yet</string>
    <string name="invoice">Invoice</string>
    <string name="user_comments">User comments</string>
    <string name="user_experience">User experience</string>
    <string name="technical_support">Technical support</string>
    <string name="do_not_disturb">Do Not Disturb</string>
    <string name="not_enabled">Not enabled</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="issue_number">Issue number -</string>
    <string name="customers_service">Customers Service</string>
    <string name="offers">Offers</string>
    <string name="favorite">Favorite</string>
    <string name="method_payment">Method of payment</string>
    <string name="complete_reservation">Complete the reservation</string>
    <string name="penalty_amount">A penalty of the amount</string>
    <string name="taxes_fees">"Taxes and fees + 450 S.R "</string>
    <string name="save_edits">Save edits</string>
    <string name="search">Search</string>
    <string name="edit_profile">Edit Personal Profile</string>
    <string name="estimated_amount">Estimated amount</string>
    <string name="save">Save</string>
    <string name="brief_about_me">Brief about me :</string>
    <string name="write_something">Write Something...</string>
    <string name="business">Business...</string>
    <string name="amount_customer_pays">The amount the customer pays :</string>
    <string name="live_broadcast">Live broadcast :</string>
    <string name="comment">Comment</string>
    <string name="book_now">Book now</string>
    <string name="rate_the_artist">Rate the Artist</string>
    <string name="register_user">Register as a user</string>
    <string name="register_service_provider">Register as a service provider</string>
    <string name="already_account">Already have an account?</string>
    <string name="or">Or</string>
    <string name="first_registration">First time registration</string>
    <string name="no_notification">No Have Notifications</string>
    <string name="log_in">Log in</string>
    <string name="email_or_mobile_number">Email or mobile number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="login_user">If you are a previous user, enter your data to be recognized</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="complaint_title">Complaint Title</string>
    <string name="language">Language</string>
    <string name="arabic_lang">Arabic Language</string>
    <string name="English_lang">English Language</string>
    <string name="current_reservations">Current reservations</string>
    <string name="ended_reservations">Ended reservations</string>
    <string name="confirmation_number">Confirmation number</string>
    <string name="transfer_invoice">Transfer invoice</string>
    <string name="download">Download</string>
    <string name="my_reservations">My reservations</string>
    <string name="confirm_reservation">Congratulations, the reservation has been confirmed</string>
    <string name="done_reservation">Booked</string>
    <string name="location">Location</string>
    <string name="party_type">Party Type</string>
    <string name="most_popular">Most popular</string>
    <string name="choose">Choose</string>
    <string name="calm">The calm</string>
    <string name="enabled">Enabled</string>
    <string name="calm_details">When the Do Not Disturb feature is enabled, alerts received during quiet hours will be silent</string>
    <string name="say_something">say something ........</string>
    <string name="look_reservations">Look for reservations</string>
    <string name="confirmed_reservation">Confirmed Reservation</string>
    <string name="canceled_reservation">Canceled reservation</string>
    <string name="customer_name">"customer name : "</string>
    <string name="city">"City : "</string>
    <string name="multiple_dates">Click on multiple dates to edit it in one go</string>
    <string name="decide_modify">Decide what you want to modify</string>
    <string name="availability_reservation_date">Availability of reservation on this date</string>
    <string name="reservation_closed_date">Reservation closed on this date</string>
    <string name="price_changed_date">The price has changed on this date</string>
</resources>
