<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/user"
            android:title="@string/tab_user"/>
        <item
            android:id="@+id/reservationFragment"
            android:icon="@drawable/calendar"
            android:title="@string/tab_reservations"/>
        <item
            android:id="@+id/reservationSearchFragment"
            android:icon="@drawable/search_icon"
            android:title="@string/search"/>
        <item
            android:id="@+id/moreFragment"
            android:icon="@drawable/more"
            android:title="@string/tab_more"/>
</menu>