<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey3"
    >

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calm"
        android:text="@string/calm"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/colorBlack"
        android:gravity="right"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switch_calm"
        android:background="@drawable/border_round_white"
        tools:text="@string/enabled"
        android:textColor="@color/colorGrey2"
        android:textSize="@dimen/_20sdp"
        android:padding="@dimen/_8sdp"
        android:textOn="@string/enabled"
        android:textOff="@string/not_enabled"
        android:checked="true"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/calm"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calm_details"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/colorGrey2"
        android:gravity="right"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/switch_calm"
        app:layout_constraintStart_toStartOf="parent"


        />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>