<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/first_name"
    android:layout_margin="@dimen/_10sdp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:orientation="vertical"
    >
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_add_pic"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_take_pic_or_choose"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_30sdp"
        />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/pic_photo"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        tools:src="@drawable/photo"
        android:background="@drawable/border_round_image"
        />

</LinearLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/next"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/button_login"
        android:text="@string/register_next"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>